--- a/framework.css
+++ b/framework.css
@@ -10,6 +10,23 @@
 
 * {
     outline: none;
+    box-sizing: border-box;
+}
+
+/* Container & Fluid */
+.container {
+    display: flex;
+    flex-direction: column;
+    width: 90%;
+    margin: 0 auto;
+    padding: 0 10px;
+}
+.container-full {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    margin: 0 auto;
+    padding: 0 10px;
 }
 
 /*
