--- a/framework.css
+++ b/framework.css
@@ -5,7 +5,6 @@
     * md: 768px - Medium
     * lg: 992px - Large
     * xl: 1200px - X-Large
-    * xxl: 1400px - XX-Large
 */
 
 * {
@@ -41,28 +40,326 @@
 /*
     Every Screen CSS Codes
 */
-@media (min-width: 576px) and (max-width: 575.98px) {
+@media (max-width: 575.98px) { /* SM */
+    /* Container & Fluid */
+    .container {
+        width: 100%;
+    }
+
+    /* Col */
+    .container > .row > .col-sm-1 {
+        display: flex;
+        flex-wrap: wrap;
+        width: calc(100% / 12 * 1);
+        padding: 0 10px;
+    }
+    .container > .row > .col-sm-2 {
+        display: flex;
+        flex-wrap: wrap;
+        width: calc(100% / 12 * 2);
+        padding: 0 10px;
+    }
+    .container > .row > .col-sm-3 {
+        display: flex;
+        flex-wrap: wrap;
+        width: calc(100% / 12 * 3);
+        padding: 0 10px;
+    }
+    .container > .row > .col-sm-4 {
+        display: flex;
+        flex-wrap: wrap;
+        width: calc(100% / 12 * 4);
+        padding: 0 10px;
+    }
+    .container > .row > .col-sm-5 {
+        display: flex;
+        flex-wrap: wrap;
+        width: calc(100% / 12 * 5);
+        padding: 0 10px;
+    }
+    .container > .row > .col-sm-6 {
+        display: flex;
+        flex-wrap: wrap;
+        width: calc(100% / 12 * 6);
+        padding: 0 10px;
+    }
+    .container > .row > .col-sm-7 {
+        display: flex;
+        flex-wrap: wrap;
+        width: calc(100% / 12 * 7);
+        padding: 0 10px;
+    }
+    .container > .row > .col-sm-8 {
+        display: flex;
+        flex-wrap: wrap;
+        width: calc(100% / 12 * 8);
+        padding: 0 10px;
+    }
+    .container > .row > .col-sm-9 {
+        display: flex;
+        flex-wrap: wrap;
+        width: calc(100% / 12 * 9);
+        padding: 0 10px;
+    }
+    .container > .row > .col-sm-10 {
+        display: flex;
+        flex-wrap: wrap;
+        width: calc(100% / 12 * 10);
+        padding: 0 10px;
+    }
+    .container > .row > .col-sm-11 {
+        display: flex;
+        flex-wrap: wrap;
+        width: calc(100% / 12 * 11);
+        padding: 0 10px;
+    }
+    .container > .row > .col-sm-12 {
+        display: flex;
+        flex-wrap: wrap;
+        width: calc(100% / 12 * 12);
+        padding: 0 10px;
+    }
+}
+@media (min-width: 576px) { /* SM */
+
+}
+
+@media (max-width: 767.98px) { /* MD */
     /* Container & Fluid */
     .container {
         width: 100%;
     }
 }
-
-@media (min-width: 768px) and (max-width: 767.98px) {
-    /* Container & Fluid */
-    .container {
-        width: 100%;
+@media (min-width: 768px) { /* MD */
+    /* Col */
+    .container > .row > .col-md-1 {
+        display: flex;
+        flex-wrap: wrap;
+        width: calc(100% / 12 * 1);
+        padding: 0 10px;
+    }
+    .container > .row > .col-md-2 {
+        display: flex;
+        flex-wrap: wrap;
+        width: calc(100% / 12 * 2);
+        padding: 0 10px;
+    }
+    .container > .row > .col-md-3 {
+        display: flex;
+        flex-wrap: wrap;
+        width: calc(100% / 12 * 3);
+        padding: 0 10px;
+    }
+    .container > .row > .col-md-4 {
+        display: flex;
+        flex-wrap: wrap;
+        width: calc(100% / 12 * 4);
+        padding: 0 10px;
+    }
+    .container > .row > .col-md-5 {
+        display: flex;
+        flex-wrap: wrap;
+        width: calc(100% / 12 * 5);
+        padding: 0 10px;
+    }
+    .container > .row > .col-md-6 {
+        display: flex;
+        flex-wrap: wrap;
+        width: calc(100% / 12 * 6);
+        padding: 0 10px;
+    }
+    .container > .row > .col-md-7 {
+        display: flex;
+        flex-wrap: wrap;
+        width: calc(100% / 12 * 7);
+        padding: 0 10px;
+    }
+    .container > .row > .col-md-8 {
+        display: flex;
+        flex-wrap: wrap;
+        width: calc(100% / 12 * 8);
+        padding: 0 10px;
+    }
+    .container > .row > .col-md-9 {
+        display: flex;
+        flex-wrap: wrap;
+        width: calc(100% / 12 * 9);
+        padding: 0 10px;
+    }
+    .container > .row > .col-md-10 {
+        display: flex;
+        flex-wrap: wrap;
+        width: calc(100% / 12 * 10);
+        padding: 0 10px;
+    }
+    .container > .row > .col-md-11 {
+        display: flex;
+        flex-wrap: wrap;
+        width: calc(100% / 12 * 11);
+        padding: 0 10px;
+    }
+    .container > .row > .col-md-12 {
+        display: flex;
+        flex-wrap: wrap;
+        width: calc(100% / 12 * 12);
+        padding: 0 10px;
     }
 }
 
-@media (min-width: 992px) and (max-width: 991.98px) {
+@media (max-width: 991.98px) { /* LG */
 
 }
-
-@media (min-width: 1200px) and (max-width: 1199.98px) {
-
+@media (min-width: 992px) { /* LG */
+    /* Col */
+    .container > .row > .col-lg-1 {
+        display: flex;
+        flex-wrap: wrap;
+        width: calc(100% / 12 * 1);
+        padding: 0 10px;
+    }
+    .container > .row > .col-lg-2 {
+        display: flex;
+        flex-wrap: wrap;
+        width: calc(100% / 12 * 2);
+        padding: 0 10px;
+    }
+    .container > .row > .col-lg-3 {
+        display: flex;
+        flex-wrap: wrap;
+        width: calc(100% / 12 * 3);
+        padding: 0 10px;
+    }
+    .container > .row > .col-lg-4 {
+        display: flex;
+        flex-wrap: wrap;
+        width: calc(100% / 12 * 4);
+        padding: 0 10px;
+    }
+    .container > .row > .col-lg-5 {
+        display: flex;
+        flex-wrap: wrap;
+        width: calc(100% / 12 * 5);
+        padding: 0 10px;
+    }
+    .container > .row > .col-lg-6 {
+        display: flex;
+        flex-wrap: wrap;
+        width: calc(100% / 12 * 6);
+        padding: 0 10px;
+    }
+    .container > .row > .col-lg-7 {
+        display: flex;
+        flex-wrap: wrap;
+        width: calc(100% / 12 * 7);
+        padding: 0 10px;
+    }
+    .container > .row > .col-lg-8 {
+        display: flex;
+        flex-wrap: wrap;
+        width: calc(100% / 12 * 8);
+        padding: 0 10px;
+    }
+    .container > .row > .col-lg-9 {
+        display: flex;
+        flex-wrap: wrap;
+        width: calc(100% / 12 * 9);
+        padding: 0 10px;
+    }
+    .container > .row > .col-lg-10 {
+        display: flex;
+        flex-wrap: wrap;
+        width: calc(100% / 12 * 10);
+        padding: 0 10px;
+    }
+    .container > .row > .col-lg-11 {
+        display: flex;
+        flex-wrap: wrap;
+        width: calc(100% / 12 * 11);
+        padding: 0 10px;
+    }
+    .container > .row > .col-lg-12 {
+        display: flex;
+        flex-wrap: wrap;
+        width: calc(100% / 12 * 12);
+        padding: 0 10px;
+    }
 }
 
-@media (min-width: 1400px) and (max-width: 1399.98px) {
+@media (max-width: 1199.98px) { /* XL */
 
+}
+@media (min-width: 1200px) { /* XL */
+    /* Col */
+    .container > .row > .col-xl-1 {
+        display: flex;
+        flex-wrap: wrap;
+        width: calc(100% / 12 * 1);
+        padding: 0 10px;
+    }
+    .container > .row > .col-xl-2 {
+        display: flex;
+        flex-wrap: wrap;
+        width: calc(100% / 12 * 2);
+        padding: 0 10px;
+    }
+    .container > .row > .col-xl-3 {
+        display: flex;
+        flex-wrap: wrap;
+        width: calc(100% / 12 * 3);
+        padding: 0 10px;
+    }
+    .container > .row > .col-xl-4 {
+        display: flex;
+        flex-wrap: wrap;
+        width: calc(100% / 12 * 4);
+        padding: 0 10px;
+    }
+    .container > .row > .col-xl-5 {
+        display: flex;
+        flex-wrap: wrap;
+        width: calc(100% / 12 * 5);
+        padding: 0 10px;
+    }
+    .container > .row > .col-xl-6 {
+        display: flex;
+        flex-wrap: wrap;
+        width: calc(100% / 12 * 6);
+        padding: 0 10px;
+    }
+    .container > .row > .col-xl-7 {
+        display: flex;
+        flex-wrap: wrap;
+        width: calc(100% / 12 * 7);
+        padding: 0 10px;
+    }
+    .container > .row > .col-xl-8 {
+        display: flex;
+        flex-wrap: wrap;
+        width: calc(100% / 12 * 8);
+        padding: 0 10px;
+    }
+    .container > .row > .col-xl-9 {
+        display: flex;
+        flex-wrap: wrap;
+        width: calc(100% / 12 * 9);
+        padding: 0 10px;
+    }
+    .container > .row > .col-xl-10 {
+        display: flex;
+        flex-wrap: wrap;
+        width: calc(100% / 12 * 10);
+        padding: 0 10px;
+    }
+    .container > .row > .col-xl-11 {
+        display: flex;
+        flex-wrap: wrap;
+        width: calc(100% / 12 * 11);
+        padding: 0 10px;
+    }
+    .container > .row > .col-xl-12 {
+        display: flex;
+        flex-wrap: wrap;
+        width: calc(100% / 12 * 12);
+        padding: 0 10px;
+    }
 }
