Update .col Class CSS

--- a/framework.css
+++ b/framework.css
@@ -37,6 +37,80 @@
     width: calc(100% + 20px);
 }
 
+/* Col */
+.container > .row > .col-1 {
+    display: flex;
+    flex-wrap: wrap;
+    width: calc(100% / 12 * 1);
+    padding: 0 10px;
+}
+.container > .row > .col-2 {
+    display: flex;
+    flex-wrap: wrap;
+    width: calc(100% / 12 * 2);
+    padding: 0 10px;
+}
+.container > .row > .col-3 {
+    display: flex;
+    flex-wrap: wrap;
+    width: calc(100% / 12 * 3);
+    padding: 0 10px;
+}
+.container > .row > .col-4 {
+    display: flex;
+    flex-wrap: wrap;
+    width: calc(100% / 12 * 4);
+    padding: 0 10px;
+}
+.container > .row > .col-5 {
+    display: flex;
+    flex-wrap: wrap;
+    width: calc(100% / 12 * 5);
+    padding: 0 10px;
+}
+.container > .row > .col-6 {
+    display: flex;
+    flex-wrap: wrap;
+    width: calc(100% / 12 * 6);
+    padding: 0 10px;
+}
+.container > .row > .col-7 {
+    display: flex;
+    flex-wrap: wrap;
+    width: calc(100% / 12 * 7);
+    padding: 0 10px;
+}
+.container > .row > .col-8 {
+    display: flex;
+    flex-wrap: wrap;
+    width: calc(100% / 12 * 8);
+    padding: 0 10px;
+}
+.container > .row > .col-9 {
+    display: flex;
+    flex-wrap: wrap;
+    width: calc(100% / 12 * 9);
+    padding: 0 10px;
+}
+.container > .row > .col-10 {
+    display: flex;
+    flex-wrap: wrap;
+    width: calc(100% / 12 * 10);
+    padding: 0 10px;
+}
+.container > .row > .col-11 {
+    display: flex;
+    flex-wrap: wrap;
+    width: calc(100% / 12 * 11);
+    padding: 0 10px;
+}
+.container > .row > .col-12 {
+    display: flex;
+    flex-wrap: wrap;
+    width: calc(100% / 12 * 12);
+    padding: 0 10px;
+}
+
 /*
     Every Screen CSS Codes
 */
