--- a/framework.css
+++ b/framework.css
@@ -38,6 +38,12 @@
 }
 
 /* Col */
+.container > .row > .col {
+    display: flex;
+    flex-wrap: wrap;
+    flex: 1;
+    padding: 0 10px;
+}
 .container > .row > .col-1 {
     display: flex;
     flex-wrap: wrap;
@@ -109,6 +115,29 @@
     flex-wrap: wrap;
     width: calc(100% / 12 * 12);
     padding: 0 10px;
+}
+
+/* Display */
+.d-none {
+    display: none !important;
+}
+.d-block {
+    display: block;
+}
+.d-inline-block {
+    display: inline-block;
+}
+.d-flex {
+    display: flex;
+}
+.d-inline-flex {
+    display: inline-flex;
+}
+.d-grid {
+    display: grid;
+}
+.d-inline-grid {
+    display: inline-grid;
 }
 
 /*
@@ -192,6 +221,29 @@
         flex-wrap: wrap;
         width: calc(100% / 12 * 12);
         padding: 0 10px;
+    }
+
+    /* Display */
+    .d-sm-none {
+        display: none !important;
+    }
+    .d-sm-block {
+        display: block;
+    }
+    .d-sm-inline-block {
+        display: inline-block;
+    }
+    .d-sm-flex {
+        display: flex;
+    }
+    .d-sm-inline-flex {
+        display: inline-flex;
+    }
+    .d-sm-grid {
+        display: grid;
+    }
+    .d-sm-inline-grid {
+        display: inline-grid;
     }
 }
 @media (min-width: 576px) { /* SM */
@@ -278,6 +330,29 @@
         width: calc(100% / 12 * 12);
         padding: 0 10px;
     }
+
+    /* Display */
+    .d-md-none {
+        display: none !important;
+    }
+    .d-md-block {
+        display: block;
+    }
+    .d-md-inline-block {
+        display: inline-block;
+    }
+    .d-md-flex {
+        display: flex;
+    }
+    .d-md-inline-flex {
+        display: inline-flex;
+    }
+    .d-md-grid {
+        display: grid;
+    }
+    .d-md-inline-grid {
+        display: inline-grid;
+    }
 }
 
 @media (max-width: 991.98px) { /* LG */
@@ -357,6 +432,29 @@
         width: calc(100% / 12 * 12);
         padding: 0 10px;
     }
+
+    /* Display */
+    .d-lg-none {
+        display: none !important;
+    }
+    .d-lg-block {
+        display: block;
+    }
+    .d-lg-inline-block {
+        display: inline-block;
+    }
+    .d-lg-flex {
+        display: flex;
+    }
+    .d-lg-inline-flex {
+        display: inline-flex;
+    }
+    .d-lg-grid {
+        display: grid;
+    }
+    .d-lg-inline-grid {
+        display: inline-grid;
+    }
 }
 
 @media (max-width: 1199.98px) { /* XL */
@@ -435,5 +533,28 @@
         flex-wrap: wrap;
         width: calc(100% / 12 * 12);
         padding: 0 10px;
+    }
+
+    /* Display */
+    .d-xl-none {
+        display: none !important;
+    }
+    .d-xl-block {
+        display: block;
+    }
+    .d-xl-inline-block {
+        display: inline-block;
+    }
+    .d-xl-flex {
+        display: flex;
+    }
+    .d-xl-inline-flex {
+        display: inline-flex;
+    }
+    .d-xl-grid {
+        display: grid;
+    }
+    .d-xl-inline-grid {
+        display: inline-grid;
     }
 }
