--- a/framework.css
+++ b/framework.css
@@ -481,6 +481,68 @@
     border-radius: 50px;
 }
 
+/* Text Color & Background Color */
+.bg-primary {
+    background-color: var(--primary-color);
+}
+.bg-secondary {
+    background-color: var(--secondary-color);
+}
+.bg-success {
+    background-color: var(--success-color);
+}
+.bg-danger {
+    background-color: var(--danger-color);
+}
+.bg-warning {
+    background-color: var(--warning-color);
+}
+.bg-info {
+    background-color: var(--info-color);
+}
+.bg-light {
+    background-color: var(--light-color);
+}
+.bg-dark {
+    background-color: var(--dark-color);
+}
+.bg-white {
+    background-color: var(--white-color);
+}
+.bg-transparent {
+    background-color: transparent;
+}
+.text-primary {
+    color: var(--primary-color);
+}
+.text-secondary {
+    color: var(--secondary-color);
+}
+.text-success {
+    color: var(--success-color);
+}
+.text-danger {
+    color: var(--danger-color);
+}
+.text-warning {
+    color: var(--warning-color);
+}
+.text-info {
+    color: var(--info-color);
+}
+.text-light {
+    color: var(--light-color);
+}
+.text-dark {
+    color: var(--dark-color);
+}
+.text-white {
+    color: var(--white-color);
+}
+.text-transparent {
+    color: transparent;
+}
+
 /*
     Every Screen CSS Codes
 */
