--- a/framework.css
+++ b/framework.css
@@ -543,6 +543,23 @@
     color: transparent;
 }
 
+/* Interactions */
+.pointer-events-none {
+    pointer-events: none;
+}
+.pointer-events-auto {
+    pointer-events: auto;
+}
+.user-select-none {
+    user-select: none;
+}
+.user-select-auto {
+    user-select: auto;
+}
+.user-select-all {
+    user-select: all;
+}
+
 /*
     Every Screen CSS Codes
 */
