--- a/framework.css
+++ b/framework.css
@@ -598,6 +598,158 @@
     overflow-y: auto;
 }
 
+/* Position */
+.position-static {
+    position: static;
+}
+.position-relative {
+    position: relative;
+}
+.position-absolute {
+    position: absolute;
+}
+.position-fixed {
+    position: fixed;
+}
+.position-sticky {
+    position: sticky;
+}
+.top-0 {
+    top: 0;
+}
+.bottom-0 {
+    bottom: 0;
+}
+.start-0 {
+    left: 0;
+}
+.end-0 {
+    right: 0;
+}
+.top-10 {
+    top: 10%;
+}
+.top-20 {
+    top: 20%;
+}
+.top-30 {
+    top: 30%;
+}
+.top-40 {
+    top: 40%;
+}
+.top-50 {
+    top: 50%;
+}
+.top-60 {
+    top: 60%;
+}
+.top-70 {
+    top: 70%;
+}
+.top-80 {
+    top: 80%;
+}
+.top-90 {
+    top: 90%;
+}
+.top-100 {
+    top: 100%;
+}
+.bottom-10 {
+    bottom: 10%;
+}
+.bottom-20 {
+    bottom: 20%;
+}
+.bottom-30 {
+    bottom: 30%;
+}
+.bottom-40 {
+    bottom: 40%;
+}
+.bottom-50 {
+    bottom: 50%;
+}
+.bottom-60 {
+    bottom: 60%;
+}
+.bottom-70 {
+    bottom: 70%;
+}
+.bottom-80 {
+    bottom: 80%;
+}
+.bottom-90 {
+    bottom: 90%;
+}
+.bottom-100 {
+    bottom: 100%;
+}
+.start-10 {
+    left: 10%;
+}
+.start-20 {
+    left: 20%;
+}
+.start-30 {
+    left: 30%;
+}
+.start-40 {
+    left: 40%;
+}
+.start-50 {
+    left: 50%;
+}
+.start-60 {
+    left: 60%;
+}
+.start-70 {
+    left: 70%;
+}
+.start-80 {
+    left: 80%;
+}
+.start-90 {
+    left: 90%;
+}
+.start-100 {
+    left: 100%;
+}
+.end-10 {
+    right: 10%;
+}
+.end-20 {
+    right: 20%;
+}
+.end-30 {
+    right: 30%;
+}
+.end-40 {
+    right: 40%;
+}
+.end-50 {
+    right: 50%;
+}
+.end-60 {
+    right: 60%;
+}
+.end-70 {
+    right: 70%;
+}
+.end-80 {
+    right: 80%;
+}
+.end-90 {
+    right: 90%;
+}
+.end-100 {
+    right: 100%;
+}
+.translate-middle {
+    transform: translate(-50%, -50%) !important;
+}
+
 /*
     Every Screen CSS Codes
 */
