Add .box-shadow And .text-shadow Class CSS

--- a/framework.css
+++ b/framework.css
@@ -750,6 +750,32 @@
     transform: translate(-50%, -50%) !important;
 }
 
+/* Shadow */
+.box-shadow-none {
+    box-shadow: none;
+}
+.box-shadow-sm {
+    box-shadow: rgba(149, 157, 165, 0.2) 0 8px 24px;
+}
+.box-shadow-md {
+    box-shadow: rgba(149, 157, 165, 0.5) 0 8px 24px;
+}
+.box-shadow-lg {
+    box-shadow: rgba(149, 157, 165, 1) 0 8px 24px;
+}
+.text-shadow-none {
+    text-shadow: none;
+}
+.text-shadow-sm {
+    text-shadow: 2px 2px rgba(149, 157, 165, 0.2);
+}
+.text-shadow-md {
+    text-shadow: 2px 2px rgba(149, 157, 165, 0.5);
+}
+.text-shadow-lg {
+    text-shadow: 2px 2px rgba(149, 157, 165, 1);
+}
+
 /*
     Every Screen CSS Codes
 */
