--- a/framework.css
+++ b/framework.css
@@ -776,6 +776,86 @@
     text-shadow: 2px 2px rgba(149, 157, 165, 1);
 }
 
+/* Sizing */
+.w-25 {
+    width: 25%;
+}
+.w-50 {
+    width: 50%;
+}
+.w-75 {
+    width: 75%;
+}
+.w-100 {
+    width: 100%;
+}
+.w-auto {
+    width: auto;
+}
+.max-w-25 {
+    max-width: 25%;
+}
+.max-w-50 {
+    max-width: 50%;
+}
+.max-w-75 {
+    max-width: 75%;
+}
+.max-w-100 {
+    max-width: 100%;
+}
+.min-w-25 {
+    min-width: 25%;
+}
+.min-w-50 {
+    min-width: 50%;
+}
+.min-w-75 {
+    min-width: 75%;
+}
+.min-w-100 {
+    min-width: 100%;
+}
+.h-25 {
+    height: 25%;
+}
+.h-50 {
+    height: 50%;
+}
+.h-75 {
+    height: 75%;
+}
+.h-100 {
+    height: 100%;
+}
+.h-auto {
+    height: auto;
+}
+.max-h-25 {
+    max-height: 25%;
+}
+.max-h-50 {
+    max-height: 50%;
+}
+.max-h-75 {
+    max-height: 75%;
+}
+.max-h-100 {
+    max-height: 100%;
+}
+.min-h-25 {
+    min-height: 25%;
+}
+.min-h-50 {
+    min-height: 50%;
+}
+.min-h-75 {
+    min-height: 75%;
+}
+.min-h-100 {
+    min-height: 100%;
+}
+
 /*
     Every Screen CSS Codes
 */
