--- a/framework.css
+++ b/framework.css
@@ -23,6 +23,7 @@
 * {
     outline: none;
     box-sizing: border-box;
+    font-family: Arial, sans-serif;
 }
 
 /* Container & Fluid */
@@ -1261,6 +1262,69 @@
     border-radius: 1px;
     max-width: 100%;
     height: auto;
+}
+
+/* Table */
+.table {
+    display: table;
+    border-collapse: collapse;
+    border-spacing: 0;
+    width: 100%;
+    color: var(--dark-color);
+    font-size: 14px;
+}
+.table > thead > tr > th {
+    text-align: left;
+    padding: 10px 7px;
+    border-bottom: 1px var(--secondary-color) solid;
+}
+.table > tbody > tr > th,td {
+    text-align: left;
+    padding: 10px 7px;
+    border-bottom: 1px var(--light-color) solid;
+}
+.table.table-striped > tbody > tr:nth-child(odd) {
+    background-color: var(--light-color);
+}
+.table.table-dark {
+    color: var(--white-color);
+    background-color: rgba(11, 9, 10, .9);
+}
+.table.table-dark.table-striped > tbody > tr:nth-child(odd) {
+    background-color: var(--dark-color) !important;
+}
+.table.table-hover > tbody > tr:hover {
+    background-color: var(--light-color);
+}
+.table .table-active {
+    background-color: var(--light-color);
+}
+.table.table-bordered {
+    border: 1px var(--light-color) solid;
+}
+.table.table-bordered > thead > tr > th {
+    border: 1px var(--light-color) solid;
+}
+.table.table-bordered > tbody > tr > td {
+    border: 1px var(--light-color) solid;
+}
+.table.table-bordered > tbody > tr > th {
+    border: 1px var(--light-color) solid;
+}
+.table.table-head-dark > thead {
+    background-color: var(--dark-color);
+    color: var(--white-color);
+}
+.table-responsive {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    overflow-y: hidden;
+    overflow-x: auto;
+}
+.table-responsive > .table {
+    min-width: 100%;
+    width: auto;
 }
 
 /*
