--- a/framework.css
+++ b/framework.css
@@ -1327,6 +1327,126 @@
     width: auto;
 }
 
+/* Form */
+.form-control {
+    display: flex;
+    width: 100%;
+    height: 35px;
+    padding: 7px 10px;
+    border-radius: 3px;
+    font-size: 15px;
+    border: 1px #d3d3d3 solid;
+}
+.form-control:focus {
+    transition: 350ms border-color;
+    border-color: #2b2d42;
+}
+.form-control[type="number"]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+.form-control[type="file"] {
+    padding-top: 5px;
+}
+.form-control[type="radio"] {
+    position: relative;
+    top: -1px;
+}
+.form-control[type="range"] {
+    padding: 0;
+}
+textarea.form-control {
+    height: 75px;
+}
+.form-control.form-valid {
+    border-color: var(--success-color);
+}
+.form-control.form-invalid {
+    border-color: var(--danger-color);
+}
+.form-box {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    height: auto;
+}
+.form-box > .form-label {
+    display: flex;
+    margin-bottom: 5px;
+    font-size: 13px;
+}
+.form-box > .form-group-box {
+    display: flex;
+    width: 100%;
+}
+.form-box > .form-group-box .form-control:not(:first-child,:last-child) {
+    border-radius: 0;
+    border-left: none;
+    border-right: none;
+}
+.form-box > .form-group-box .form-control:first-child {
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+    border-right: none;
+}
+.form-box > .form-group-box .form-control:last-child {
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+    border-left: none;
+}
+.form-box .form-prepend-box {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-width: 50px;
+    width: 50px;
+    max-width: 50px;
+    height: 100%;
+    background-color: #e5e5e5;
+    border-top-left-radius: 3px;
+    border-bottom-left-radius: 3px;
+}
+.form-box .form-append-box {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-width: 50px;
+    width: 50px;
+    max-width: 50px;
+    height: 100%;
+    background-color: #e5e5e5;
+    border-top-right-radius: 3px;
+    border-bottom-right-radius: 3px;
+}
+.form-box.check-form {
+    align-items: center;
+    flex-direction: row;
+}
+.form-box.check-form > .form-label {
+    order: 2;
+    position: relative;
+    top: .5px;
+    margin-bottom: 0;
+    margin-left: 5px;
+}
+.form-box.check-form > .form-control {
+    order: 1;
+    height: 17px;
+    width: 17px;
+}
+.form-status-feedback {
+    display: flex;
+    width: 100%;
+    font-size: 13px;
+    margin-top: 5px;
+}
+.form-status-feedback.valid {
+    color: var(--success-color);
+}
+.form-status-feedback.invalid {
+    color: var(--danger-color);
+}
+
 /*
     Every Screen CSS Codes
 */
