--- a/framework.css
+++ b/framework.css
@@ -1447,6 +1447,42 @@ textarea.form-control {
     color: var(--danger-color);
 }
 
+/* Card */
+.card {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    height: auto;
+    box-shadow: rgba(0, 0, 0, 0.24) 0 3px 8px;
+}
+.card .card-header {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    height: auto;
+    border-bottom: 1px var(--secondary-color) solid;
+    padding: 10px 0;
+}
+.card .card-title {
+    font-size: 21px;
+    font-weight: 500;
+}
+.card .card-body {
+    display: block;
+    flex-wrap: wrap;
+    width: 100%;
+    height: auto;
+    padding: 8px 15px;
+}
+.card .card-body .card-text {
+    font-size: 14px;
+}
+.card .card-img-top {
+    width: 100%;
+    height: auto;
+    max-height: 150px;
+}
+
 /*
     Every Screen CSS Codes
 */
