--- a/framework.css
+++ b/framework.css
@@ -1512,7 +1512,7 @@ textarea.form-control {
 }
 .btn.btn-primary:focus {
     transition: 50ms box-shadow;
-    box-shadow: rgba(1, 79, 104, 0.7) 0 0 0 2px, rgba(1, 79, 104, 0.75) 0 4px 6px -1px, rgba(1, 79, 104, 0.7) 0 1px 0 inset;
+    box-shadow: rgba(0, 150, 199, 0.7) 0 0 0 2px, rgba(0, 150, 199, 0.75) 0 4px 6px -1px, rgba(0, 150, 199, 0.7) 0 1px 0 inset;
 }
 .btn.btn-secondary {
     background-color: var(--secondary-color);
@@ -1580,7 +1580,7 @@ textarea.form-control {
 }
 .btn.btn-outline-primary:focus {
     transition: 50ms box-shadow;
-    box-shadow: rgba(1, 79, 104, 0.7) 0 0 0 2px, rgba(1, 79, 104, 0.75) 0 4px 6px -1px, rgba(1, 79, 104, 0.7) 0 1px 0 inset;
+    box-shadow: rgba(0, 150, 199, 0.7) 0 0 0 2px, rgba(0, 150, 199, 0.75) 0 4px 6px -1px, rgba(0, 150, 199, 0.7) 0 1px 0 inset;
 }
 .btn.btn-outline-secondary {
     background-color: transparent;
@@ -1761,6 +1761,99 @@ textarea.form-control {
 .alert .btn-alert-close:before {
     content: '\2716';
     line-height: 30px;
+}
+
+/* Modal */
+.modal {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, .2);
+}
+.modal.show {
+    display: block !important;
+}
+.modal.show .modal-box {
+    animation: modalShowAnimation 500ms;
+    top: 0;
+}
+.modal-box {
+    position: relative;
+    top: -1000px;
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex;
+    flex-direction: column;
+    min-width: 300px;
+    width: auto;
+    height: auto;
+    margin-top: 20px;
+    background-color: var(--white-color);
+    border-radius: 4px;
+}
+.modal-box.modal-md {
+    width: 350px;
+}
+.modal-box.modal-lg {
+    width: 65%;
+}
+.modal-box.modal-xl {
+    width: 95%;
+}
+.modal-box .modal-header {
+    position: relative;
+    display: block;
+    width: 100%;
+    height: auto;
+    padding: 15px 13px;
+    border-bottom: 1px #cccccc solid;
+}
+.modal-box .modal-header .modal-title {
+    font-weight: 500;
+    font-size: 17px;
+}
+.modal-box .modal-header .modal-close-button {
+    position: absolute;
+    right: 5px;
+    top: 50%;
+    transform: translateY(-50%);
+    display: block;
+    font-size: 20px;
+    height: 30px;
+    width: 30px;
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+}
+.modal-box .modal-header .modal-close-button:before {
+    content: '\2716';
+    line-height: 30px;
+}
+.modal-box .modal-content {
+    position: relative;
+    display: block;
+    width: 100%;
+    height: auto;
+    padding: 15px 13px;
+}
+.modal-box .modal-footer {
+    position: relative;
+    display: block;
+    width: 100%;
+    height: auto;
+    padding: 15px 13px;
+    border-top: 1px #cccccc solid;
+}
+@keyframes modalShowAnimation {
+    from {
+        top: -500px;
+    }
+    to {
+        top: 0;
+    }
 }
 
 /*
@@ -2564,6 +2657,11 @@ textarea.form-control {
     }
     .invisible-sm {
         visibility: hidden;
+    }
+
+    /* Modal */
+    .modal-box {
+        width: 95% !important;
     }
 }
 @media (min-width: 576px) { /* SM */
