--- a/framework.css
+++ b/framework.css
@@ -783,82 +783,82 @@ h1,h2,h3,h4,h5,h6 {
 
 /* Sizing */
 .w-25 {
-    width: 25%;
+    width: 25% !important;
 }
 .w-50 {
-    width: 50%;
+    width: 50% !important;
 }
 .w-75 {
-    width: 75%;
+    width: 75% !important;
 }
 .w-100 {
-    width: 100%;
+    width: 100% !important;
 }
 .w-auto {
-    width: auto;
+    width: auto !important;
 }
 .max-w-25 {
-    max-width: 25%;
+    max-width: 25% !important;
 }
 .max-w-50 {
-    max-width: 50%;
+    max-width: 50% !important
 }
 .max-w-75 {
-    max-width: 75%;
+    max-width: 75% !important;
 }
 .max-w-100 {
-    max-width: 100%;
+    max-width: 100% !important;
 }
 .min-w-25 {
-    min-width: 25%;
+    min-width: 25% !important;
 }
 .min-w-50 {
-    min-width: 50%;
+    min-width: 50% !important;
 }
 .min-w-75 {
-    min-width: 75%;
+    min-width: 75% !important;
 }
 .min-w-100 {
-    min-width: 100%;
+    min-width: 100% !important;
 }
 .h-25 {
-    height: 25%;
+    height: 25% !important;
 }
 .h-50 {
-    height: 50%;
+    height: 50% !important;
 }
 .h-75 {
-    height: 75%;
+    height: 75% !important;
 }
 .h-100 {
-    height: 100%;
+    height: 100% !important;
 }
 .h-auto {
-    height: auto;
+    height: auto !important;
 }
 .max-h-25 {
-    max-height: 25%;
+    max-height: 25% !important;
 }
 .max-h-50 {
-    max-height: 50%;
+    max-height: 50% !important;
 }
 .max-h-75 {
-    max-height: 75%;
+    max-height: 75% !important;
 }
 .max-h-100 {
-    max-height: 100%;
+    max-height: 100% !important;
 }
 .min-h-25 {
-    min-height: 25%;
+    min-height: 25% !important;
 }
 .min-h-50 {
-    min-height: 50%;
+    min-height: 50% !important;
 }
 .min-h-75 {
-    min-height: 75%;
+    min-height: 75% !important;
 }
 .min-h-100 {
-    min-height: 100%;
+    min-height: 100% !important;
 }
 
 /* Spacing */
